--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "motion": "^12.0.6",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-alice-carousel": "^2.9.1",
+    "react-dom": "^19.0.0",
+    "react-parallax-tilt": "^1.7.280"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
