--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "gsap": "^3.12.7",
     "motion": "^12.0.6",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-alice-carousel": "^2.9.1",
-    "react-dom": "^19.0.0",
-    "react-parallax-tilt": "^1.7.280"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
