--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@react-email/components": "^0.0.33",
+    "@react-email/render": "^1.0.5",
     "gsap": "^3.12.7",
     "motion": "^12.0.6",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-parallax-tilt": "^1.7.282"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
