--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.2",
     "@react-email/components": "^0.0.33",
     "@react-email/render": "^1.0.5",
+    "@vercel/analytics": "^1.5.0",
     "gsap": "^3.12.7",
     "motion": "^12.0.6",
     "next": "15.1.6",
